--- a/CafeFront/app/src/main/res/layout/activity_login.xml
+++ b/CafeFront/app/src/main/res/layout/activity_login.xml
@@ -22,19 +22,10 @@
         android:id="@+id/nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre"
+        android:text="*Nombre"
         android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@id/indicaciones"
         app:layout_constraintStart_toStartOf="@id/NombreLayout"/>
-
-    <!--EditText
-        android:id="@+id/campo_nombre"
-        android:layout_width="250dp"
-        android:layout_height="55dp"
-        android:hint="Juan Pérez Gómez"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nombre"/-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/NombreLayout"
@@ -51,23 +42,14 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <TextView
         android:id="@+id/contra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Contraseña"
+        android:text="*Contraseña"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@id/NombreLayout"
         app:layout_constraintStart_toStartOf="@id/NombreLayout"/>
-
-    <!--EditText
-        android:id="@+id/campo_contra"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        app:layout_constraintStart_toStartOf="@id/contra"
-        app:layout_constraintTop_toBottomOf="@id/contra"
-        app:endIconMode="password_toggle"/-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ContraLayout"
