--- a/CafeFront/app/src/main/res/layout/activity_iniciar_mesa.xml
+++ b/CafeFront/app/src/main/res/layout/activity_iniciar_mesa.xml
@@ -7,14 +7,84 @@
     android:layout_height="match_parent"
     tools:context=".IniciarMesa">
 
+    <TextView
+        android:id="@+id/titulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Seleccione en que mesa se encuentra"
+        android:textSize="35dp"
+        android:textAlignment="center"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/zona_libros"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Libros"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/titulo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Spinner
+        android:id="@+id/spinner_libros"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:entries="@array/libros"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/zona_libros"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/zona_deportes"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Libros"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/spinner_libros"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Spinner
+        android:id="@+id/spinner_deportes"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:entries="@array/deportes"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/zona_deportes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/zona_musica"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Libros"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/spinner_deportes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Spinner
+        android:id="@+id/spinner_musica"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:entries="@array/musica"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/zona_musica"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <Button
         android:id="@+id/harry_potter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Harry Potter"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="Confirmar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
