--- a/CafeFront/app/src/main/res/layout/activity_iniciar_mesa.xml
+++ b/CafeFront/app/src/main/res/layout/activity_iniciar_mesa.xml
@@ -11,7 +11,7 @@
         android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Seleccione en que mesa se encuentra"
+        android:text="Seleccione en qué área y mesa se encuentra"
         android:textSize="35dp"
         android:textAlignment="center"
         android:layout_marginTop="100dp"
@@ -43,7 +43,7 @@
         android:id="@+id/zona_deportes"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Libros"
+        android:text="Deportes"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@id/spinner_libros"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +63,7 @@
         android:id="@+id/zona_musica"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Libros"
+        android:text="Música"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@id/spinner_deportes"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
-        android:id="@+id/harry_potter"
+        android:id="@+id/confirmar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirmar"
