--- a/CafeFront/app/src/main/res/values/arrays.xml
+++ b/CafeFront/app/src/main/res/values/arrays.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="libros">
+        <item>-------------</item>
         <item>Harry Potter</item>
         <item>Disney</item>
         <item>Desdentao</item>
     </string-array>
 
     <string-array name="deportes">
+        <item>-------------</item>
         <item>Formula 1</item>
         <item>Futbol</item>
         <item>Tennis</item>
     </string-array>
 
     <string-array name="musica">
+        <item>-------------</item>
         <item>One direction</item>
         <item>El canto del loco</item>
         <item>Nirvana</item>
