--- a/CafeFront/app/src/main/res/layout/activity_pedido_mesa.xml
+++ b/CafeFront/app/src/main/res/layout/activity_pedido_mesa.xml
@@ -7,4 +7,49 @@
     android:layout_height="match_parent"
     tools:context=".PedidoMesa">
 
+    <TextView
+        android:id="@+id/texto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Seleccione lo que va a querer"
+        android:textSize="30dp"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/comida"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comida"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/texto"/>
+
+    <Button
+        android:id="@+id/bebida"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bebida"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toEndOf="@id/comida"
+        app:layout_constraintEnd_toStartOf="@id/postres"
+        app:layout_constraintTop_toBottomOf="@id/texto"/>
+
+    <Button
+        android:id="@+id/postres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Postre"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintStart_toEndOf="@id/bebida"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/texto"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
