--- a/CafeFront/app/src/main/res/values/arrays.xml
+++ b/CafeFront/app/src/main/res/values/arrays.xml
@@ -11,7 +11,7 @@
         <item>-------------</item>
         <item>Formula 1</item>
         <item>Futbol</item>
-        <item>Tennis</item>
+        <item>Tenis</item>
     </string-array>
 
     <string-array name="musica">
