--- a/CafeFront/app/src/main/res/layout/activity_ver_pedido_cliente.xml
+++ b/CafeFront/app/src/main/res/layout/activity_ver_pedido_cliente.xml
@@ -30,4 +30,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <Button
+        android:id="@+id/pedir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirmar pedido"
+        android:textColor="@color/black"
+        android:backgroundTint="#635AD83E"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
