--- a/CafeFront/app/src/main/res/layout/activity_mesas_view_holder.xml
+++ b/CafeFront/app/src/main/res/layout/activity_mesas_view_holder.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/nombre"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:text="Prueba"
@@ -33,6 +33,15 @@
         android:layout_height="wrap_content"
         android:text="20"
         android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="@id/casilla"
+        app:layout_constraintBottom_toBottomOf="@id/casilla"
+        app:layout_constraintStart_toEndOf="@id/nombre"/>
+
+    <TextView
+        android:id="@+id/cantidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Cantidad"
         app:layout_constraintTop_toTopOf="@id/casilla"
         app:layout_constraintBottom_toBottomOf="@id/casilla"
         app:layout_constraintEnd_toEndOf="parent"/>
