--- a/CafeFront/app/src/main/res/layout/activity_pedido_view_holder.xml
+++ b/CafeFront/app/src/main/res/layout/activity_pedido_view_holder.xml
@@ -9,10 +9,9 @@
 
     <TextView
         android:id="@+id/nombre"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="Prueba"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,12 +20,23 @@
 
     <TextView
         android:id="@+id/precio"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="20"
         android:layout_marginEnd="15dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintStart_toEndOf="@id/nombre"/>
+
+    <TextView
+        android:id="@+id/cantidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Prueba"
+        android:layout_marginStart="45dp"
+        app:layout_constraintStart_toEndOf="@id/precio"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
