--- a/CafeFront/app/src/main/res/layout/activity_mesas_view_holder.xml
+++ b/CafeFront/app/src/main/res/layout/activity_mesas_view_holder.xml
@@ -37,7 +37,7 @@
         app:layout_constraintBottom_toBottomOf="@id/casilla"
         app:layout_constraintStart_toEndOf="@id/nombre"/>
 
-    <EditText
+    <!--EditText
         android:id="@+id/cantidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,6 +45,39 @@
         android:layout_marginEnd="15dp"
         app:layout_constraintTop_toTopOf="@id/casilla"
         app:layout_constraintBottom_toBottomOf="@id/casilla"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/-->
+
+    <LinearLayout
+        android:id="@+id/cantidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:id="@+id/restar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:textSize="25dp"/>
+
+        <TextView
+            android:id="@+id/cantidad_texto"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:text="1"
+            android:textAlignment="center"
+            android:layout_marginStart="10dp"/>
+
+        <TextView
+            android:id="@+id/sumar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:textSize="20dp"
+            android:layout_marginStart="10dp"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
