--- a/CafeFront/app/src/main/res/layout/activity_ver_pedido_trabajador.xml
+++ b/CafeFront/app/src/main/res/layout/activity_ver_pedido_trabajador.xml
@@ -20,13 +20,26 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_pedido_trabajador"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         app:layout_constraintTop_toBottomOf="@id/pedido_mesa"
+        app:layout_constraintBottom_toTopOf="@id/total"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recycler_pedido_trabajador"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
