--- a/CafeFront/app/src/main/res/layout/activity_ver_pedido_trabajador.xml
+++ b/CafeFront/app/src/main/res/layout/activity_ver_pedido_trabajador.xml
@@ -42,4 +42,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recycler_pedido_trabajador"/>
 
+    <Button
+        android:id="@+id/liberar_mesa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Liberar"
+        android:textSize="20dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/total" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
