--- a/CafeFront/app/src/main/res/layout/activity_main_gerente.xml
+++ b/CafeFront/app/src/main/res/layout/activity_main_gerente.xml
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/salir"/>
 
-    <ImageView
+    <!--ImageView
         android:id="@+id/salir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -66,6 +66,6 @@
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"/-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
